--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/bcryptjs": "^3.0.0",
+    "@types/uuid": "^11.0.0",
     "autoprefixer": "^10.4.22",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -31,8 +32,11 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.5.1",
     "stripe": "^19.3.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "ua-parser-js": "^2.0.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
