--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.553.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.19.3",
     "next": "^16.0.7",
     "next-auth": "^4.24.13",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
